# QuaCCAToo

./: .buildinfo  .directory  .gitignore  CITATION.cff  Ex01:spin1⁄2_Rabi_Hahn.ipynb  Ex01:spin1⁄2_resonance_T2.ipynb  Ex02:NV_Ramsey_PODMR.ipynb  Ex03:NV_XY8_ambiguous_resonances.ipynb  Ex05:NV_XY8_ambiguous_resonances.ipynb  README.md  TestsFunction.ipynb  TestsObjects.ipynb  genindex.html  gui.py  hahn.npz  index.html  installation.html  modules.html  notebook1.html  notebook2.html  notebook3.html  notebook4.html  notebook5.html  notebook6.html  notebooks.html  objects.inv  py-modindex.html  pyproject.toml  rabi.npz  search.html  searchindex.js  setup.py  sim_script.py  tests.ipynb  tutorial1.html  tutorial2.html  tutorial3.html  tutorial4.html  tutorial5.html  tutorial6.html  (+3 more)
.github/workflows/: pylint.yml  pypi.yml  pytest.yml  ruff.yml  sphinx.yml  sphinx_deploy.yml
GUI/sketch_designer/: GUI_sketch.py  GUI_sketch_new.ui
GUI_sketch_designer/: GUI_sketch.py  GUI_sketch.ui  GUI_sketch_new.py
_modules/: index.html
_modules/lmfit/: models.html
_modules/quaccatoo/: Analysis.html  ExpData.html  FitFunctions.html  PredefDDSeqs.html  PredefSeqs.html  PulseShapes.html  QSys.html  utils.html
_modules/quaccatoo/Analysis/: Analysis.html  FitFunctions.html
_modules/quaccatoo/ExpData/: ExpData.html
_modules/quaccatoo/PulsedSim/: PredefDDSeqs.html  PredefSeqs.html  PulseShapes.html  PulsedSim.html
_modules/quaccatoo/QSys/: NVSys.html  QSys.html
_modules/quaccatoo/analysis/: analysis.html  fit_functions.html
_modules/quaccatoo/exp_data/: exp_data.html
_modules/quaccatoo/pulsed_sim/: predef_dd_seqs.html  predef_seqs.html  pulse_shapes.html  pulsed_sim.html
_modules/quaccatoo/qsys/: NV_sys.html  qsys.html
_sources/: index.rst.txt  installation.rst.txt  modules.rst.txt  notebook2.rst.txt  notebook3.rst.txt  notebooks.rst.txt  tutorial5.rst.txt  tutorial6.rst.txt  tutorial8.rst.txt
_sources/tutorials/: 02_NV_Ramsey_PODMR.ipynb.txt  03_NV_conditional_gates.ipynb.txt  04_NV_sensing_control_by_DD.ipynb.txt  06_NV_teleportation.ipynb.txt  08_NV_DD_gates.ipynb.txt
data/: C13_families.csv  database_XY8-N_theta_ms-1.npz  database_XY8-N_theta_ms1.npz  gyromagnetic_ratios.csv  hahn.npz  n14.npz  rabi.npz
deprecated/: PulsedExp_nested.py
docs/: Ex01:spin1⁄2_Rabi_Hahn.ipynb  Ex03:NV_XY8_ambiguous_resonances.ipynb  conf.py  index.rst  installation.rst  modules.rst  notebook1.rst  notebook2.rst  notebook3.rst  notebook4.rst  notebook5.rst  notebook6.rst  notebooks.rst  requirements.txt  tutorial1.rst  tutorial3.rst  tutorial7.rst  tutorial8.rst  tutorials.rst
docs/ExampleNotebooks/: Ex01_spin1⁄2_Rabi_Hahn.ipynb  Ex02_NV_Ramsey_PODMR.ipynb  Ex03_NV_ambiguous_resonances.ipynb
docs/example_notebooks/: Ex01_spin_half_Rabi_Hahn.ipynb  Ex02_NV_Ramsey_PODMR.ipynb  Ex03_NV_ambiguous_resonances.ipynb
docs/tutorials/: 01_spin_half_Rabi_Hahn.ipynb  02_NV_Ramsey_PODMR.ipynb  03_NV_ambiguous_resonances.ipynb  03_NV_conditional_gates.ipynb  04_NV_ambiguous_resonances.ipynb  04_NV_sensing_control_by_DD.ipynb  05_NV_ambiguous_resonances.ipynb  06_NV_teleportation.ipynb  07_P1_DEER.ipynb  08_NV_DD_gates.ipynb  NV_Ramsey_PODMR.ipynb  spin_half_Rabi_Hahn.ipynb
docs/tutorials/sim_data_tutorials/: CPMG-16_13C  CPMG-24_13C  CPMG-32_13C  CPMG-56_13C  CPMG-96_13C
example_notebooks/: Ex01_spin_half_Rabi_Hahn.html  Ex02_NV_Ramsey_PODMR.html  Ex03_NV_ambiguous_resonances.html  Ex03_NV_ambiguous_resonances.ipynb
logic/: logo.qrc
quaccatoo/: Analysis.py  BasicPulsedExp.py  BasicPulsedExperiments.py  BasicPulsedSim.py  DDPulsedExp.py  DDPulsedExperiments.py  DDPulsedSim.py  ExpData.py  FitFunctions.py  NVSys.py  PredefDDSeqs.py  PredefSeqs.py  PredefinedHamiltonians.py  PredefinedPulsedExperiments.py  PulseShapes.py  PulsedExp.py  PulsedExperiment.py  PulsedLogic.py  PulsedSim.py  QSys.py  __init__.py  nv.py  predefined_hamiltonians.py  pulsed_experiments.py  pulsed_logic.py  utils.py  visualization.py
quaccatoo/Analysis/: Analysis.py  FitFunctions.py  __init__.py
quaccatoo/ExpData/: ExpData.py  __init__.py
quaccatoo/PulsedSim/: PredefDDSeqs.py  PredefSeqs.py  PulseShapes.py  PulsedSim.py  __init__.py
quaccatoo/QSys/: NVSys.py  QSys.py  __init__.py
quaccatoo/analysis/: __init__.py  analysis.py  fit_functions.py
quaccatoo/deprecated/: visualization.py
quaccatoo/exp_data/: __init__.py  exp_data.py
quaccatoo/pulsed_sim/: __init__.py  predef_dd_seqs.py  predef_seqs.py  pulse_shapes.py  pulsed_sim.py
quaccatoo/q_sys/: NV_sys.py  __init__.py  q_sys.py
quaccatoo/qsys/: NV_sys.py  P1_sys.py  __init__.py  qsys.py
tests/: test_qct.py
tutorials/: 01_spin_half_Rabi_Hahn.html  01_spin_half_Rabi_Hahn.ipynb  02_NV_Ramsey_PODMR.html  02_NV_Ramsey_PODMR.ipynb  03_NV_ambiguous_resonances.html  03_NV_conditional_gates.html  03_NV_conditional_gates.ipynb  04_NV_sensing_control_by_DD.html  04_NV_sensing_control_by_DD.ipynb  05_NV_ambiguous_resonances.html  05_NV_ambiguous_resonances.ipynb  06_NV_teleportation.html  06_NV_teleportation.ipynb  07_P1_DEER.html  08_NV_DD_gates.html  08_NV_DD_gates.ipynb
