[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "QuaCCAToo"
dynamic = ["version"]
description = "Quantum Color Centers Analysis Toolbox"
readme = "README.md"

license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

requires-python = ">=3.9"

authors = [
    { name = "Lucas Tsunaki", email = "lucastsunaki@hotmail.com" },
    { name = "Anmol Singh", email = "anmol.singh@helmholtz-berlin.de" },
    { name = "Sergei Trofimov", email = "sergei.trofimov@helmholtz-berlin.de" },
    { name = "Kseniia Volkova", email = "kseniia.volkova@helmholtz-berlin.de" },
]

maintainers = [
    { name = "Lucas Tsunaki", email = "lucas.tsunaki@hotmail.com" },
    { name = "Anmol Singh", email = "anmol.singh@helmholtz-berlin.de" },
]

dependencies = [
    "lmfit",
    "matplotlib",
    "numpy",
    "qutip",
    "scipy",
]

classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Quantum Computing",
]

[project.urls]
Homepage = "https://github.com/QISS-HZB/QuaCCAToo"
Source = "https://github.com/QISS-HZB/QuaCCAToo"
Documentation = "https://qiss-hzb.github.io/QuaCCAToo/"
Issues = "https://github.com/QISS-HZB/QuaCCAToo/issues"
Pypi = "https://pypi.org/project/QuaCCAToo/"
"Arxiv Reference" = "https://arxiv.org/abs/2507.18759"

[tool.hatch.version]
path = "quaccatoo/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "./quaccatoo",
]

[tool.hatch.build.targets.sdist]
include = [
    "quaccatoo",
    "tests",
]
exclude =[
    "docs"
]

[project.optional-dependencies]
dev = [
    "hatch",
    "pytest",
    "ruff",
]

[tool.hatch.envs.dev]
features = [
    "dev",
]

[tool.ruff]
line-length = 109
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
ignore = ["E741"]
task-tags = [""]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.coverage.report]
skip_empty = true
