[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "QuaCCAToo"
dynamic = ["version"]
description = "Quantum Color Centers Analysis Toolbox"
readme = "README.md"

license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

requires-python = ">=3.10"

authors = [
    { name = "Lucas Tsunaki", email = "tsunakilucas@gmail.com" },
    { name = "Anmol Singh"},
    { name = "Sergei Trofimov", email = "sergei.trofimov@helmholtz-berlin.de" },
    { name = "Kseniia Volkova", email = "kseniia.volkova@helmholtz-berlin.de" },
    { name = "Boris Naydenov", email = "boris.naydenov@helmholtz-berlin.de" }
]

maintainers = [
    { name = "Lucas Tsunaki", email = "tsunakilucas@gmail.com" },
    { name = "Anmol Singh", email = "anmol.singh@helmholtz-berlin.de" },
]

dependencies = [
    "lmfit",
    "matplotlib",
    "numpy",
    "qutip>=5",
    "scipy",
    "dill",
]

classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Quantum Computing",
]

[project.urls]
Homepage = "https://github.com/QISS-HZB/QuaCCAToo"
Source = "https://github.com/QISS-HZB/QuaCCAToo"
Documentation = "https://qiss-hzb.github.io/QuaCCAToo/"
Issues = "https://github.com/QISS-HZB/QuaCCAToo/issues"
PyPI = "https://pypi.org/project/QuaCCAToo/"
arXiv = "https://arxiv.org/abs/2507.18759"

[tool.hatch.version]
path = "quaccatoo/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "./quaccatoo",
]

[tool.hatch.build.targets.sdist]
include = [
    "quaccatoo",
    "tests",
]
exclude =[
    "docs"
]

[project.optional-dependencies]
dev = [
    "hatch",
    "pytest",
    "ruff",
    "ty",
    "pylint"
]

[tool.hatch.envs.dev]
features = [
    "dev",
]

[tool.ruff]
line-length = 100
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
ignore = ["E741"]
task-tags = [""]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.coverage.report]
skip_empty = true

[tool.ty.src]
exclude = ["tests/", "docs/"]

[tool.pylint.design]
max-args = 30
max-positional-arguments = 30
max-locals = 30
max-branches = 40
max-statements = 80
max-attributes = 30

[tool.pylint."messages control"]
disable = [
    "R1720", "R1705", # if-else statements
    "C0103", "C0301", # long line, case variables
    "W0511", # todo comments
    "W0221", "W0223", # overriding of parameters in parent class
    "W0201" # lazy init
    ]

[tool.pylint.similarities]
ignore-imports = true
ignore-comments = true
ignore-docstrings = true
min-similarity-lines = 9